...
<resources>
    <string name="money">$%s</string>
    <string name="text_date_delimiter">" - "</string>
    <string name="text_subject">Production Defect Report</string>

    <string name="error_unknown">We are experiencing technical difficulties</string>
    <string name="network_error">Something went wrong. Please check network connection.</string>
    <string name="location_timeout_error">Unable to identify your location.</string>
    <string name="error_generic">Something went wrong.</string>
    <string name="send_message_msg">Your message has been sent</string>
    <string name="send_message_title">Success</string>
    <string name="send_message_fail">Your message has failed</string>
    <string name="empty_message_error">Message can\'t be empty</string>
...
    <string name="driver_clear_photo">Are you sure your Driver Profile Photo clearly shows your face and eyes without sunglasses?</string>

    <string name="title_driver_photo">Your Driver Photo</string>
    <string name="title_driver_license">Driver License</string>
    <string name="title_driver_tnc_sticker">Auto Inspection Sticker</string>
    <string name="title_driver_insurance">Insurance</string>
    <string name="title_terms_and_conditions">Terms and Conditions</string>
    <string name="title_driver_vehicle_information">Vehicle Information</string>
    <string name="title_driver_year">Year</string>
    <string name="title_driver_make">Make</string>
    <string name="title_driver_model">Model</string>
    <string name="title_driver_color">Color</string>
    <string name="title_license_plate">License plate</string>
...
    <string name="field_required">This field is required.</string>

    <!-- edit picture -->
    <string name="edit_picture">Edit Picture</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose From Library</string>
    <string name="cancel">Cancel</string>
    <string name="please_select_photo">Please select photo</string>
    <string name="enter_value">Enter value</string>
    <string name="ride_upgrade_msg">Do you confirm an upgrade from: %1$s to: %2$s class?</string>
    <string name="my_location">My Location</string>

    <!-- ride upgrade -->
...
