...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/toolbarTitle"
                            style="@style/Toolbar.Title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:maxLines="1"
                            tools:text="@string/app_name"
...
                    <RelativeLayout
                        android:layout_width="120dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center">

                        <Button
                            android:id="@+id/toolbarActionButton"
                            style="@style/Toolbar.ActionButton"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_toolbar_action_fatal"
                            tools:background="@drawable/bg_toolbar_action_warn"
                            tools:ignore="RtlSymmetry"
...
